--- a/www/phpmotors/css/style.css
+++ b/www/phpmotors/css/style.css
@@ -229,6 +229,10 @@ html {
   margin-left: 30px;
 }
 
+.header-link {
+  margin-top: 30px;
+}
+
 .blackfont {
   color: black;
 }
@@ -404,6 +408,10 @@ html {
 
 .loginform {
   margin-left: 30px;
+}
+
+.header-link {
+  margin-top: 30px;
 }
 
 .blackfont {
@@ -590,6 +598,10 @@ html {
   margin-left: 30px;
 }
 
+.header-link {
+  margin-top: 30px;
+}
+
 .blackfont {
   color: black;
 }
@@ -774,6 +786,10 @@ li a {
 
 .loginform {
   margin-left: 30px;
+}
+
+.header-link {
+  margin-top: 30px;
 }
 
 .blackfont {
