--- a/www/phpmotors/css/style.css
+++ b/www/phpmotors/css/style.css
@@ -7,6 +7,19 @@ html {
   font-family: 'Source Code Pro', 'Poppins', sans-serif;
 }
 
+.notice {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
+
+#yellowbackground {
+  background-color: #efff86;
+  padding: 10px;
+}
+
 .center {
   text-align: center;
 }
@@ -134,6 +147,51 @@ max-width: 599px) {
     color: white;
   }
   /* Footer of page */
+  
+  .reviewList {
+    list-style:none;
+    background-color: #efff86;
+    padding-left: 15px;
+    padding-top: 30px;
+    padding-bottom: 15px;
+  }
+
+  #successMessage{
+    color: red;
+  }
+
+  #review {
+    margin-top: -3px;
+    padding: 10px;
+    background-color: white;
+  }
+
+  #screenName {
+    width: 150px;
+  }
+
+  .reviewform form {
+    margin: 5px;
+    padding: 3px;
+    border: 3px solid black;
+    display: flex;
+    flex-direction: column;
+  }
+  
+
+
+  #largeText {
+    font-size: 18px;
+  }
+
+  #smallText {
+    font-size: 12px;
+  }
+
+  .reviews {
+    border-top: 5px solid #3a3a3a;
+  }
+
   .footer {
     padding:5px;
     border-top: 5px solid #3a3a3a;
@@ -415,6 +473,59 @@ max-width: 599px) {
   }
   
   /* Footer of page */
+  
+   .reviewList {
+     list-style:none;
+     background-color: #efff86;
+     padding-left: 15px;
+     padding-top: 30px;
+     padding-bottom: 15px;
+   }
+
+   #successMessage{
+     color: red;
+   }
+
+   #review {
+     margin-top: -3px;
+     padding: 10px;
+     background-color: white;
+   }
+
+   #screenName {
+     width: 150px;
+   }
+
+   #reviewSubmitBtn {
+     margin-top: 15px;
+     width: 130px;
+     background-color: #377cb9;
+     border-radius: 0;
+
+   }
+
+   .reviewform form {
+     margin: 5px;
+     padding: 3px;
+     border: 3px solid black;
+     display: flex;
+     flex-direction: column;
+   }
+
+
+
+   #largeText {
+     font-size: 18px;
+   }
+
+   #smallText {
+     font-size: 12px;
+   }
+
+   .reviews {
+     border-top: 5px solid #3a3a3a;
+   }
+
   .footer {
     padding:5px;
     border-top: 5px solid #3a3a3a;
@@ -704,6 +815,58 @@ max-width: 599px) {
   }
   
   /* Footer of page */
+   .reviewList {
+     list-style:none;
+     background-color: #efff86;
+     padding-left: 15px;
+     padding-top: 30px;
+     padding-bottom: 15px;
+   }
+
+   #successMessage{
+     color: red;
+   }
+
+   #review {
+     margin-top: -3px;
+     padding: 10px;
+     background-color: white;
+   }
+
+   #screenName {
+     width: 150px;
+   }
+
+   #reviewSubmitBtn {
+     margin-top: 15px;
+     width: 130px;
+     background-color: #377cb9;
+     border-radius: 0;
+
+   }
+
+   .reviewform form {
+     margin: 5px;
+     padding: 3px;
+     border: 3px solid black;
+     display: flex;
+     flex-direction: column;
+   }
+
+
+
+   #largeText {
+     font-size: 18px;
+   }
+
+   #smallText {
+     font-size: 12px;
+   }
+
+   .reviews {
+     border-top: 5px solid #3a3a3a;
+   }
+
   .footer {
     padding:5px;
     border-top: 5px solid #3a3a3a;
@@ -986,6 +1149,60 @@ li a {
 }
 
 /* Footer of page */
+
+   .reviewList {
+     list-style:none;
+     background-color: #efff86;
+     padding-left: 15px;
+     padding-top: 30px;
+     padding-bottom: 15px;
+   }
+
+   #successMessage{
+     color: red;
+   }
+
+   #review {
+     margin-top: -3px;
+     padding: 10px;
+     background-color: white;
+   }
+
+   #screenName {
+     width: 150px;
+   }
+
+   #reviewSubmitBtn {
+     margin-top: 15px;
+     width: 130px;
+     background-color: #377cb9;
+     border-radius: 0;
+
+   }
+
+   .reviewform form {
+     margin: 5px;
+     padding: 3px;
+     border: 3px solid black;
+     display: flex;
+     flex-direction: column;
+   }
+
+
+
+   #largeText {
+     font-size: 18px;
+   }
+
+   #smallText {
+     font-size: 12px;
+   }
+
+   .reviews {
+     border-top: 5px solid #3a3a3a;
+   }
+
+
 .footer {
   padding:5px;
   border-top: 5px solid #3a3a3a;
